# Hometask_Project3

./: .gitignore
Part1/: main.cpp  symbol_matrix_interface.cpp  symbol_matrix_interface.hpp
Part3/common/: symbol_matrix_interface.cpp  symbol_matrix_interface.hpp
Part3/demo/: main.cpp
Part3/tests/: main.cpp
Part4/common/: symbol_matrix_interface.cpp  symbol_matrix_interface.hpp
Part4/demo/: main.cpp
Part4/tests/: main.cpp
Part5/: CMakeLists.txt
Part5/taskOne-matrix/: CMakeLists.txt
Part5/taskOne-smi/: CMakeLists.txt  main.cpp  smi.cpp  smi.hpp
Part5/taskOne-test/: CMakeLists.txt  test.cpp
build-Part5-Desktop-Default/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja  taskOne.cbp
build-Part5-Desktop-Default/taskOne-matrix/: cmake_install.cmake  taskOne-matrix  taskOne-matrix.cbp
build-Part5-Desktop-Default/taskOne-smi/: cmake_install.cmake  taskOne-smi.cbp
build-Part5-Desktop-Default/taskOne-test/: cmake_install.cmake  taskOne-test  taskOne-test.cbp
